logs/Slang/chapter-8/8.26.3--type_access_extends.sv.log
name: type_access_extends
description: accessing types from extended interface class
should_fail: 0
tags: 8.26.3
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.26.3--type_access_extends.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.26.3--type_access_extends.sv:8:2: error: language feature not yet supported
	interface class ihello;
	^~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.26.3--type_access_extends.sv:13:2: error: language feature not yet supported
	interface class ihello_ex extends ihello;
	^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
